--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Boxinverse</title>
-        <link rel="stylesheet" href="/css/bootstrap.css">
-        <link rel="stylesheet" href="/css/style.css">
-        <link rel="icon" href="/images/logo-small.png">
+        <link rel="stylesheet" href="./css/bootstrap.css">
+        <link rel="stylesheet" href="./css/style.css">
+        <link rel="icon" href="./images/logo-small.png">
         <link href="https://fonts.cdnfonts.com/css/cabinet-grotesk" rel="stylesheet">
     </head>
     <body>
@@ -14,7 +14,7 @@
             <div class="container-fluid align-items-center" id="header-container" >
                 <div class="row">
                     <div class="col-lg-6">
-                        <img src="/images/logo.png" alt="" class="img-fluid" style="cursor: pointer;">
+                        <img src="./images/logo.png" alt="" class="img-fluid" style="cursor: pointer;">
                     </div>
                 </div>
                 <div class="col-lg-4">
@@ -48,21 +48,21 @@
                         <li class="list-group-numbered"><a href="" id="sign-up-two" style="cursor: pointer;">Sign Up</a></li>
                     </div>
                     <div class="col-2" id="people-container">
-                        <a href="""><img src="/images/people.png" alt="" id="people-image"  style="cursor: pointer !important;"></a>
+                        <a href="""><img src="./images/people.png" alt="" id="people-image"  style="cursor: pointer !important;"></a>
                     </div>
                     <div class="col-6">
                         <div id="girl-image" style="position: relative; left: 0; top: 0;">
-                            <img src="/images/Vector 7.png" alt="" id="girl-shadow">
-                            <img src="/images/Group 35.png" alt="" id="girl">
-                            <img src="images/sun.png" alt="" id="sun-img">
+                            <img src="./images/Vector 7.png" alt="" id="girl-shadow">
+                            <img src="./images/Group 35.png" alt="" id="girl">
+                            <img src="./images/sun.png" alt="" id="sun-img">
                         </div>
                     </div>
                 </div>
             </div>
             <div class="col-12" id="list-container">
                 <div>
-                    <img src="/images/ad-two.png" alt="" id="ad-two">
-                    <img src="images/ad-one.png" alt="" id="ad-one">
+                    <img src="./images/ad-two.png" alt="" id="ad-two">
+                    <img src="./images/ad-one.png" alt="" id="ad-one">
                 </div>
             </div>
         </section>
@@ -70,7 +70,7 @@
             <div id="max-width">
                 <div class="row" >
                     <div class="col-8">
-                        <img src="/images/announce-tab.png" alt="" id="announce-tab-img" style="cursor: pointer;">
+                        <img src="./images/announce-tab.png" alt="" id="announce-tab-img" style="cursor: pointer;">
                     </div>
                     <div class="col-4 my-5">
                         <h1 id="why">Why Us?</h1>
@@ -115,19 +115,19 @@
             <div class="d-flex" >
                 <div class=""  >
                     <button type="" id="btn-one">
-                        <img src="/images/img-one.png" alt="" id="img-one">
+                        <img src="./images/img-one.png" alt="" id="img-one">
                         <p id="img-text">Collaborate with like brands and gain insights into marketing tools</p>
                     </button>
                 </div>
                 <div class="">
                     <button type="" id="btn-two">
-                        <img src="/images/img-two.png" alt="" id="img-two">
+                        <img src="./images/img-two.png" alt="" id="img-two">
                         <p id="img-text-two">Engaging with like brands and gain insights into marketing tools</p>
                     </button>
                 </div>
                 <div class="">
                     <button type="" id="btn-three">
-                        <img src="/images/img-three.png" alt="" id="img-three">
+                        <img src="./images/img-three.png" alt="" id="img-three">
                         <p id="img-text-three">Study trends with like brands and gain insights into marketing tools</p>
                     </button>
                 </div>
@@ -158,7 +158,7 @@
                         </p>
                     </div>
                     <div class="col-5">
-                        <img src="/images/Group 37.png" alt="" style="cursor: pointer;">
+                        <img src="./images/Group 37.png" alt="" style="cursor: pointer;">
                     </div>
                     <div class="col-6">
                         <a href="" id="sign-up-three" class="list-group-numbered "><li>Sign Up</li></a>
@@ -179,10 +179,10 @@
             </div>
             <div class="row">
                 <div class="col-12 text-center">
-                    <img src="/images/Group 36.png" alt="" id="group-img">
+                    <img src="./images/Group 36.png" alt="" id="group-img">
                 </div>
                 <div class="col-12">
-                    <img src="/images/color.png" alt="" id="color-img">
+                    <img src="./images/color.png" alt="" id="color-img">
                 </div>
                 <div class="row">
                     <div class="d-flex" id="stats">
@@ -200,7 +200,7 @@
         <section>
             <div class="d-flex bg-black row">
                 <div class="col-5">
-                    <a href=""><img src="/images/laptop.png" alt="" id="laptop-img"></a>
+                    <a href=""><img src="./images/laptop.png" alt="" id="laptop-img"></a>
                 </div>
                 <div class="col-7 ps-4">
                     <h3>Want to keep in touch?</h3>
@@ -213,7 +213,7 @@
         <footer class="">
             <div class="row" >
                 <div class="col-8">
-                    <img src="/images/logo.png" alt="" id="footer-logo">
+                    <img src="./images/logo.png" alt="" id="footer-logo">
                 </div>
                 <div class="col-4 d-flex" id="col-2-container">
                     <div>
