--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
                 </div>
             </div>
        </header>
-        <section>
+        <section >
             <div class="container-fluid" id="max-width">
-                <div class="row" >
+                <div class="row" style="padding-top: 110px;">
                     <div class="col-7">
                         <h2>Captivate Your Audience,</h2>
                         <h2>Elevate Your Brand</h2>
@@ -45,10 +45,10 @@
                         </div>
                     </div>
                     <div class="">
-                        <li class="list-group-numbered"><a href="" id="sign-up-two" style="cursor: pointer;">Sign Up</a></li>
+                        <li class="list-group-numbered"><a href="" id="sign-up-two">Sign Up</a></li>
                     </div>
                     <div class="col-2" id="people-container">
-                        <a href="""><img src="./images/people.png" alt="" id="people-image"  style="cursor: pointer !important;"></a>
+                        <a href=""><img src="./images/people.png" alt="" id="people-image"></a>
                     </div>
                     <div class="col-6">
                         <div id="girl-image" style="position: relative; left: 0; top: 0;">
@@ -72,11 +72,11 @@
                     <div class="col-8">
                         <img src="./images/announce-tab.png" alt="" id="announce-tab-img" style="cursor: pointer;">
                     </div>
-                    <div class="col-4 my-5">
+                    <div class="col-4 mt-5 mb-3">
                         <h1 id="why">Why Us?</h1>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row ms-5">
                     <div class="" >
                         <h1 id="n-one" class="d-flex">1</h1> 
                     </div>
@@ -87,7 +87,7 @@
                         <t>and working together to achieve outstanding results.</t>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row ms-5">
                     <div class="" >
                         <h1 id="n-two" class="d-flex">2</h1> 
                     </div>
@@ -98,7 +98,7 @@
                         <t>and working together to achieve outstanding results. Your success is our success</t>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row ms-5">
                     <div class="" >
                         <h1 id="n-three" class="d-flex">3</h1> 
                     </div>
@@ -135,7 +135,7 @@
         </section>
         <section style="background-color: black; margin-bottom: 80px;">
                 <div class="row p-5" >
-                    <div class="col-7" >
+                    <div class="col-7 ps-5" >
                         <h2 style="color: white;">Captivate Your Audience,</h2>
                         <h2 style="color: white;">Elevate Your Brand</h2> <br>
                         <p class="" id="text-pad">
@@ -158,7 +158,7 @@
                         </p>
                     </div>
                     <div class="col-5">
-                        <img src="./images/Group 37.png" alt="" style="cursor: pointer;">
+                        <a href=""><img src="./images/Group 37.png" alt="" id="group-37-img"></a>
                     </div>
                     <div class="col-6">
                         <a href="" id="sign-up-three" class="list-group-numbered "><li>Sign Up</li></a>
